@@ -1,3 +1,7 @@
+Thu Jan  6 21:01:11 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* intervm.c (rb_intervm_str): smart clean rewrite.  Same effect.
+
 Wed Jan  5 19:48:02 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* dln.c (dln_load): initial support for MVM-capable extensions.
